--- a/templates/gr_ad.html
+++ b/templates/gr_ad.html
@@ -4,6 +4,13 @@
       <td colspan="2" align="center"><H2>{GR_AD_CONFIG_HEADLINE}</H2></td>
     </tr>
     <tr class="row2" valign="top">
+      <td align="right">{GR_AD_POLL_ACTIVATED}</td>
+      <td>
+        <input type="radio" name="poll" value="Y"{GR_POLL_YES_S}>{GR_POLL_YES_F}
+        <input type="radio" name="poll" value="N"{GR_POLL_NO_S}>{GR_POLL_NO_F}
+      </td>
+    </tr>
+    <tr class="row2" valign="top">
       <td align="right">{GR_AD_HEADLINE_F}</td>
       <td><textarea name="header" rows="5" cols="120" class="input">{GR_AD_HEADLINE}</textarea></td>
     </tr>
