--- a/templates/gr_vr.html
+++ b/templates/gr_vr.html
@@ -53,7 +53,7 @@
     <td valign="top" width="30%">
     <!-- IF GR_NOT_VOTED-->
       <p>{GR_POLL_HEADLINE}</p>
-      <form action="viewrequest" method="GET">
+      <form action="viewrequest.php" method="GET">
         <input type="hidden" name="request_id" value="{GR_REQUEST_ID}">
         <input type="submit" name="accept" value="{GR_POLL_YES_F}">
         <input type="submit" name="decline" value="{GR_POLL_NO_F}">
