--- a/templates/WoWMoonclaw01/admin/admin.html
+++ b/templates/WoWMoonclaw01/admin/admin.html
@@ -1,3 +1,3 @@
-<!-- INCLUDE ../../../../../templates/WoWMoonclaw01/page_header.html -->
+<!-- INCLUDE ../../../../templates/WoWMoonclaw01/page_header.html -->
 <!-- INCLUDE ../gr_ad.html -->
-<!-- INCLUDE ../../../../../templates/WoWMoonclaw01/page_tail.html --> 
+<!-- INCLUDE ../../../../templates/WoWMoonclaw01/page_tail.html --> 
