--- a/templates/luna_wotlk/admin/admin.html
+++ b/templates/luna_wotlk/admin/admin.html
@@ -1,3 +1,3 @@
-<!-- INCLUDE ../../../../../templates/luna_wotlk/page_header.html -->
+<!-- INCLUDE ../../../../templates/luna_wotlk/page_header.html -->
 <!-- INCLUDE ../gr_ad.html -->
-<!-- INCLUDE ../../../../../templates/luna_wotlk/page_tail.html --> 
+<!-- INCLUDE ../../../../templates/luna_wotlk/page_tail.html --> 
