--- a/templates/gr_li.html
+++ b/templates/gr_li.html
@@ -1,8 +1,24 @@
+<!-- IF OUTPUT -->
+  <table width="100%" cellspacing="0" cellpadding="6">
+    <tr class="row2">
+      <td colspan="4" align="center">
+        <table width="100%" cellpadding="10">
+          <tr>
+            <td align="left">
+              <img src="../../images/false.png"></td><td><H2>{OUTPUT}</H2></td><td align="right"><img src="../../images/false.png">
+            </td>
+          </tr>
+        </table>
+    </tr>
+    <tr>
+      <td colspan="4">&nbsp;</td>
+    </tr>
+<!-- ENDIF -->
 <!-- IF GR_SHOW_LOGIN -->
   <form action="login.php" name="inputform" method="POST">
     <table width="100%" cellspacing="0" cellpadding="6">
       <tr class="row2">
-        <td colspan="4" align="center"><H1>{GR_LOGIN_HEADLINE}</H1></td>
+        <td colspan="4" align="center"><H2>{GR_LOGIN_HEADLINE}</H2></td>
       </tr>
       <tr class="row1">
         <td align="right">{GR_USERNAME_F}</td>
@@ -18,23 +34,6 @@
       </tr>
     </table> 
   </form>
-<!-- ENDIF -->
-<!-- IF OUTPUT -->
-  <table width="100%" cellspacing="0" cellpadding="6">
-    <tr>
-      <td colspan="4">&nbsp;</td>
-    </tr>
-    <tr class="row2">
-      <td colspan="4" align="center">
-        <table width="100%" cellpadding="10">
-          <tr>
-            <td align="left">
-              <img src="../../images/false.png"></td><td><H2>{OUTPUT}</H2></td><td align="right"><img src="../../images/false.png">
-            </td>
-          </tr>
-        </table>
-    </tr>
-  </table>
 <!-- ENDIF -->
 <!-- IF GR_SHOW_CLOSED -->
   <table width="100%" cellspacing="0" cellpadding="6">
@@ -70,10 +69,14 @@
           <H2>{GR_ANSWER_F}</H2>
           <form action="login.php" method="POST">
             <input type="hidden" name="username" value="{GR_USERNAME}">
+            <input type="hidden" name="password" value="{GR_PASSWORD}">
             <textarea name="usercomment" rows="10" cols="100" class="input"></textarea><br><br>
             <input type="submit" class="mainoption" name="usercomment_submit">
           </form>
         </td>
       </tr>
     </table> 
+<!-- ENDIF -->
+<!-- IF GR_INSERT_ANSWER -->
+  {GR_INSERT_ANSWER}
 <!-- ENDIF -->
