--- a/templates/gr_wr.html
+++ b/templates/gr_wr.html
@@ -1,4 +1,20 @@
 <table width="100%" cellspacing="0" cellpadding="6">
+    <!-- IF OUTPUT-->
+    <tr class="row2">
+      <td colspan="6" align="center">
+        <table width="100%" cellpadding="10">
+          <tr>
+            <td align="left">
+              <img src="../../images/false.png"></td><td><H2>{OUTPUT}</H2></td><td align="right"><img src="../../images/false.png">
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+    </tr>
+    <!-- ENDIF -->
     <tr class="row1">
       <td colspan="5" align="center"><h2>{GR_WRITE_HEADLINE}</h2></td>
       <td><form action="login.php">
@@ -35,21 +51,5 @@
         <input type="reset"  class="liteoption"  value="{GR_RESET}">
       </td>
     </tr>
-    <!-- IF OUTPUT-->
-    <tr >
-      <td colspan="6">&nbsp;</td>
-    </tr>
-    <tr class="row2">
-      <td colspan="6" align="center">
-        <table width="100%" cellpadding="10">
-          <tr>
-            <td align="left">
-              <img src="../../images/false.png"></td><td><H2>{OUTPUT}</H2></td><td align="right"><img src="../../images/false.png">
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-    <!-- ENDIF -->
   </form>
 </table>
