--- a/templates/gr_wr.html
+++ b/templates/gr_wr.html
@@ -1,3 +1,4 @@
+<!-- JQUERY --> {JQUERY_INCLUDES}
 <table width="100%" cellspacing="0" cellpadding="6">
     <!-- IF OUTPUT-->
     <tr class="row2">
@@ -5,7 +6,7 @@
         <table width="100%" cellpadding="10">
           <tr>
             <td align="left">
-              <img src="../../images/false.png"></td><td><H2>{OUTPUT}</H2></td><td align="right"><img src="../../images/false.png">
+              <img src="../../images/false.png"></td><td align="center"><H2>{OUTPUT}</H2></td><td align="right"><img src="../../images/false.png">
             </td>
           </tr>
         </table>
@@ -25,9 +26,11 @@
     <tr class="row2">
       <td colspan="6" align="center"><p>{GR_WRITE_WELCOME}</p></td>
     </tr>
+</table>
+<form action="writerequest.php" name="inputform" method="POST">
+  <table width="100%" cellspacing="0" cellpadding="6">
     <tr class="row1">
       <td>&nbsp;</td>
-  <form action="writerequest.php" name="inputform" method="POST">
       <td align="right">{GR_USERNAME_F}</td>
       <td><input name="username" type="text" size="50" value="{GR_USERNAME}"></td>
       <td align="right">{GR_EMAIL_F}</td>
@@ -42,7 +45,7 @@
       <td>&nbsp;</td>
       <td align="right" valign="top">{GR_TEXT_F}</td>
       <td colspan="4" valign="top">
-       <textarea name="text" rows="10" cols="100" class="input">{GR_TEXT}</textarea>
+       {GR_EDITOR}<textarea id="requesttext" name="text" class="jTagEditor">{GR_TEXT}</textarea></td>
       </td>
     </tr>
     <tr class="row2">
@@ -51,5 +54,5 @@
         <input type="reset"  class="liteoption"  value="{GR_RESET}">
       </td>
     </tr>
-  </form>
-</table>
+  </table>
+</form>
