--- a/templates/gr_ad.html
+++ b/templates/gr_ad.html
@@ -1,9 +1,10 @@
+{UPDCHECK_BOX}
 <form action="admin.php" method="POST">
   <table width="100%" cellspacing="0" cellpadding="6">
     <tr class="row1">
-      <td colspan="2" align="center"><H2>{GR_AD_CONFIG_HEADLINE}</H2></td>
+      <th colspan="2">{GR_AD_CONFIG_HEADLINE}</th>
     </tr>
-    <tr class="row2" valign="top">
+    <tr class="row1" valign="top">
       <td align="right">{GR_AD_POLL_ACTIVATED}</td>
       <td>
         <input type="radio" name="poll" value="Y"{GR_POLL_YES_S}>{GR_POLL_YES_F}
