--- a/templates/gr_vr.html
+++ b/templates/gr_vr.html
@@ -1,74 +1,89 @@
-{OUTPUT} 
 <!-- IF GR_LISTREQUESTS -->
-<table width="100%" cellspacing="0" cellpadding="6">
-  <tr>
-    <th>{GR_USERNAME_F}</th><th>{GR_TEXT_F}</th><th>&nbsp;</th>
-  </tr>
-  <!-- BEGIN request_list -->
-  <tr class="{request_list.GR_ROW_CLASS}">
-    <td valign="top" width="100"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}"><b>{request_list.GR_USERNAME}</b></a></td>
-    <td valign="top" align="left">{request_list.GR_TEXT}</td>
-    <td>&nbsp;</td> 
-  </tr>
-  <!-- END request_list -->
-<tr><td colspan="3" align="center"><p><b>{GR_ADMIN_ONLY}</b></p></td></tr>
-  <tr>
-    <th>{GR_ADMIN_USER_F}</th><th colspan="2">{GR_ADMIN_TEXT_F}</th>
-  </tr>
-  <!-- BEGIN admin_request_list -->
-  <tr class="{admin_request_list.GR_ROW_CLASS}">
-    <td valign="top" width="100"><a href="viewrequest.php?request_id={admin_request_list.GR_REQUEST_ID}"><b>{admin_request_list.GR_USERNAME}</b></a></td>
-    <td valign="top" align="left">{admin_request_list.GR_TEXT}</td>
-    <td valign="top" align="right"><a href="viewrequest.php?request_del={admin_request_list.GR_REQUEST_ID}">delete</td> 
-  </tr>
-  <!-- END admin_request_list -->
-</table>
+<form action="viewrequest.php" method="POST">
+  <table width="100%" cellspacing="0" cellpadding="6">
+    <tr>
+      <th>{GR_USERNAME_F}</th><th>{GR_TEXT_F}</th><th>&nbsp;</th>
+    </tr>
+    <!-- BEGIN request_list -->
+    <tr class="{request_list.GR_ROW_CLASS}">
+      <td valign="top" width="100"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}"><b>{request_list.GR_USERNAME}</b></a></td>
+      <td valign="top" align="left">{request_list.GR_TEXT}</td>
+      <td>&nbsp;</td> 
+    </tr>
+    <!-- END request_list -->
+    <tr>
+      <td colspan="3" align="center"><p><b>{GR_ADMIN_ONLY}</b></p></td>    
+    </tr>
+    <tr>
+      <th>{GR_ADMIN_USER_F}</th><th colspan="2">{GR_ADMIN_TEXT_F}</th>
+    </tr>
+    <!-- BEGIN admin_request_list -->
+    <tr class="{admin_request_list.GR_ROW_CLASS}">
+      <td valign="top" width="100"><a href="viewrequest.php?request_id={admin_request_list.GR_REQUEST_ID}"><b>{admin_request_list.GR_USERNAME}</b></a></td>
+      <td valign="top" align="left">{admin_request_list.GR_TEXT}</td>
+      <td valign="top" align="right"><input type="submit" name="del_submit" class="mainoption" value="{GR_AD_DELETE}">
+                                     <input type="hidden" name="del_id" value="{admin_request_list.GR_REQUEST_ID}"></td>
+    </tr>
+    <!-- END admin_request_list -->
+  </table>
+</form>
 <!-- ENDIF -->
 <!-- IF GR_SHOWREQUEST -->
-<table width="100%" cellspacing="0" cellpadding="6">
-  <tr class="row1">
-    <td colspan="2" align="center">
-    <table width="100%">
-      <tr>
-        <td width="20%"" align="left">
-          <a href="viewrequest.php">{GR_GOBACK}</a>
-        </td align="center">
-        <td align="center">
-          <H2>{GR_SHOWREQUEST_HEADLINE} {GR_USERNAME}</H2>
-        </td>
-        <td width="20%" align="left">
-          {GR_AD_CHANGE_STATUS}
-        </td>
-      </tr>
-    </table>
-    </td>
-  </tr>
-  <tr class="row2">
-    <td colspan="2">
-      <p>{GR_TEXT}</p>
-    </td>
-  </tr>
-  <tr class="row1">
-    <td>
-      {COMMENTS}
-    </td>
-    <td valign="top" width="30%">
-    <!-- IF GR_NOT_VOTED-->
-      <p>{GR_POLL_HEADLINE}</p>
+  <table width="100%" cellspacing="0" cellpadding="6">
+    <tr class="row1">
+      <td colspan="2" align="center">
+      <table width="100%">
+        <tr>
+          <th colspan="3">{GR_VIEWREQUEST}</th>
+        </tr>
+        <tr>
+          <td width="20%"" align="left">
+            <a href="viewrequest.php">{GR_GOBACK}</a>
+          </td align="center">
+          <td align="center">
+            <H2>{GR_SHOWREQUEST_HEADLINE} {GR_USERNAME}</H2>
+          </td>
+          <td width="20%" align="left">
+            {GR_AD_CHANGE_STATUS}
+          </td>
+        </tr>
+      </table>
+      </td>
+    </tr>
+  </table>
+
+  <table width="100%" cellspacing="0" cellpadding="6">
+    <tr class="row2">
+      <td colspan="2">
+        <table width="70%" align="center">
+          <tr>
+            <td>{GR_TEXT}</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr class="row1">
+      <td>
+        {COMMENTS}
+      </td>
+      <td valign="top" width="30%">
+      <!-- IF GR_NOT_VOTED-->
       <form action="viewrequest.php" method="GET">
-        <input type="hidden" name="request_id" value="{GR_REQUEST_ID}">
-        <input type="submit" name="accept" value="{GR_POLL_YES_F}">
-        <input type="submit" name="decline" value="{GR_POLL_NO_F}">
-      </form>
-    <!-- ENDIF -->
-    <!-- IF GR_ALREADY_VOTED -->
       <p>{GR_POLL_HEADLINE}</p>
-      {GR_POLL_YES_F}
-      {GR_POLL_YES_B}<br>
-      {GR_POLL_NO_F}
-      {GR_POLL_NO_B}
-    <!-- ENDIF -->
-    </td>
-  </tr>
-</table>
+      <input type="hidden" name="request_id" value="{GR_REQUEST_ID}">
+      <input type="submit" name="accept" class="mainoption" value="{GR_POLL_YES_F}">
+      <input type="submit" name="decline" class="liteoption" value="{GR_POLL_NO_F}">
+      </form>      
+      <!-- ENDIF -->
+      <!-- IF GR_ALREADY_VOTED -->
+        <p>{GR_POLL_HEADLINE}</p>
+        {GR_POLL_YES_F}
+        {GR_POLL_YES_B}<br>
+        {GR_POLL_NO_F}
+        {GR_POLL_NO_B}
+      <!-- ENDIF -->
+      </td>
+    </tr>
+  </table>
+
 <!-- ENDIF -->
