--- a/templates/gr_vr.html
+++ b/templates/gr_vr.html
@@ -2,27 +2,48 @@
 <form action="viewrequest.php" method="POST">
   <table width="100%" cellspacing="0" cellpadding="6">
     <tr>
-      <th>{GR_USERNAME_F}</th><th>{GR_TEXT_F}</th><th>&nbsp;</th>
+      <th align="left">{GR_USERNAME_F}</th><th align="left">{GR_TEXT_F}</th><th>&nbsp;</th>
     </tr>
     <!-- BEGIN request_list -->
     <tr class="{request_list.GR_ROW_CLASS}">
-      <td valign="top" width="100"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}"><b>{request_list.GR_USERNAME}</b></a></td>
+      <td valign="top" width="200"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}"><b>{request_list.GR_USERNAME}</b></a></td>
       <td valign="top" align="left"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}">{request_list.GR_TEXT}</a></td>
-      <td>&nbsp;</td> 
+      <td valign="top" align="right"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}">{request_list.GR_VOTECHECK}</a></td> 
     </tr>
     <!-- END request_list -->
+    <!-- IF admin_request -->
     <tr>
-      <td colspan="3" align="center"><p><b>{GR_ADMIN_ONLY}</b></p></td>    
+      <td colspan="3" align="center"><br><p><b>{GR_ADMIN_ONLY}</b></p></td>    
     </tr>
     <tr>
-      <th>{GR_ADMIN_USER_F}</th><th colspan="2">{GR_ADMIN_TEXT_F}</th>
+      <th align="left">{GR_ADMIN_USER_F}</th><th colspan="2" align="left">{GR_ADMIN_TEXT_F}</th>
     </tr>
+    <!-- ENDIF -->
     <!-- BEGIN admin_request_list -->
     <tr class="{admin_request_list.GR_ROW_CLASS}">
       <td valign="top" width="100"><a href="viewrequest.php?request_id={admin_request_list.GR_REQUEST_ID}"><b>{admin_request_list.GR_USERNAME}</b></a></td>
       <td valign="top" align="left">    <a href="viewrequest.php?request_id={admin_request_list.GR_REQUEST_ID}">{admin_request_list.GR_TEXT}</a></td>
       <td valign="top" align="right"><input type="submit" name="del_submit" class="mainoption" value="{GR_AD_DELETE}">
-                                     <input type="hidden" name="del_id" value="{admin_request_list.GR_REQUEST_ID}"></td>
+                                     <input type="hidden" name="request_id" value="{admin_request_list.GR_REQUEST_ID}"></td>
+    </tr>
+    <!-- END admin_request_list -->
+    <!-- IF admin_not_activated_list -->
+    <tr>
+      <td colspan="3" align="center"><br><p><b>{GR_ADMIN_NOT_ACTIVATED_F}</b></p></td>
+    </tr>
+    <tr>
+      <th align="left">{GR_ADMIN_USER_F}</th><th colspan="2" align="left">{GR_ADMIN_TEXT_F}</th>
+    </tr>
+    <!-- ENDIF -->
+    <!-- BEGIN admin_not_activated_list -->
+    <tr class="{admin_not_activated_list.GR_ROW_CLASS}">
+      <td valign="top" width="100"><a href="viewrequest.php?request_id={admin_not_activated_list.GR_REQUEST_ID}"><b>{admin_not_activated_list.GR_USERNAME}</b></a></td>
+      <td valign="top" align="left"><a href="viewrequest.php?request_id={admin_not_activated_list.GR_REQUEST_ID}">{admin_not_activated_list.GR_TEXT}</a></td>
+      <td valign="top" align="right">
+        <input type="submit" name="act_submit" class="mainoption" value="{GR_AD_ACTIVATE}">
+        <input type="submit" name="del_submit" class="mainoption" value="{GR_AD_DELETE}">
+        <input type="hidden" name="request_id" value="{admin_not_activated_list.GR_REQUEST_ID}">
+      </td>
     </tr>
     <!-- END admin_request_list -->
   </table>
