more shiny, glossy boxes  :)

--- a/templates/gr_wr.html
+++ b/templates/gr_wr.html
@@ -1,3 +1,6 @@
+<script>
+  {GR_INFOBOX}
+</script>
 <!-- JQUERY --> {JQUERY_INCLUDES}
 <form action="login.php">
   <table width="100%" cellspacing="0" cellpadding="6">
