--- a/templates/gr_ad.html
+++ b/templates/gr_ad.html
@@ -1,3 +1,6 @@
+<script>
+  {GR_POPUP}
+</script>
 {UPDCHECK_BOX}
 <form action="admin.php" method="POST">
   <table width="100%" cellspacing="0" cellpadding="6">
