--- a/templates/gr_li.html
+++ b/templates/gr_li.html
@@ -1,3 +1,6 @@
+<script>
+  {GR_INFOBOX}
+</script>
 <!-- JQUERY --> {JQUERY_INCLUDES}
 <!-- IF OUTPUT -->
   <table width="100%" cellspacing="0" cellpadding="6">
