--- a/templates/gr_vr.html
+++ b/templates/gr_vr.html
@@ -1,3 +1,6 @@
+<script>
+  {GR_INFOBOX}
+</script>
 <!-- IF GR_LISTREQUESTS -->
 <form action="viewrequest.php" method="POST">
   <table width="100%" cellspacing="0" cellpadding="6">
@@ -8,7 +11,7 @@
     <tr class="{request_list.GR_ROW_CLASS}">
       <td valign="top" width="200"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}"><b>{request_list.GR_USERNAME}</b></a></td>
       <td valign="top" align="left"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}">{request_list.GR_TEXT}</a></td>
-      <td valign="top" align="right"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}">{request_list.GR_VOTECHECK}</a></td> 
+      <td valign="top" width="250" align="right"><a href="viewrequest.php?request_id={request_list.GR_REQUEST_ID}">{request_list.GR_VOTECHECK}</a></td> 
     </tr>
     <!-- END request_list -->
     <!-- IF admin_request -->
@@ -21,10 +24,14 @@
     <!-- ENDIF -->
     <!-- BEGIN admin_request_list -->
     <tr class="{admin_request_list.GR_ROW_CLASS}">
-      <td valign="top" width="100"><a href="viewrequest.php?request_id={admin_request_list.GR_REQUEST_ID}"><b>{admin_request_list.GR_USERNAME}</b></a></td>
-      <td valign="top" align="left">    <a href="viewrequest.php?request_id={admin_request_list.GR_REQUEST_ID}">{admin_request_list.GR_TEXT}</a></td>
-      <td valign="top" align="right"><input type="submit" name="del_submit" class="mainoption" value="{GR_AD_DELETE}">
-                                     <input type="hidden" name="request_id" value="{admin_request_list.GR_REQUEST_ID}"></td>
+      <td valign="top" width="100"><b>{admin_request_list.GR_USERNAME}</b></td>
+      <td valign="top" align="left">{admin_request_list.GR_TEXT}</td>
+      <td valign="top" align="right">
+        <!-- IF admin_request_list.GR_REQUEST_ID -->
+        <input type="submit" name="del_submit" class="mainoption" value="{GR_AD_DELETE}">
+        <input type="hidden" name="request_id" value="{admin_request_list.GR_REQUEST_ID}">
+        <!-- ENDIF -->
+      </td>
     </tr>
     <!-- END admin_request_list -->
     <!-- IF admin_not_activated_list -->
@@ -37,12 +44,14 @@
     <!-- ENDIF -->
     <!-- BEGIN admin_not_activated_list -->
     <tr class="{admin_not_activated_list.GR_ROW_CLASS}">
-      <td valign="top" width="100"><a href="viewrequest.php?request_id={admin_not_activated_list.GR_REQUEST_ID}"><b>{admin_not_activated_list.GR_USERNAME}</b></a></td>
-      <td valign="top" align="left"><a href="viewrequest.php?request_id={admin_not_activated_list.GR_REQUEST_ID}">{admin_not_activated_list.GR_TEXT}</a></td>
+      <td valign="top" width="100"><b>{admin_not_activated_list.GR_USERNAME}</b></td>
+      <td valign="top" align="left">{admin_not_activated_list.GR_TEXT}</td>
       <td valign="top" align="right">
+        <!-- IF admin_not_activated_list.GR_REQUEST_ID -->
         <input type="submit" name="act_submit" class="mainoption" value="{GR_AD_ACTIVATE}">
-        <input type="submit" name="del_submit" class="mainoption" value="{GR_AD_DELETE}">
-        <input type="hidden" name="request_id" value="{admin_not_activated_list.GR_REQUEST_ID}">
+        <input type="submit" name="del_not_act" class="mainoption" value="{GR_AD_DELETE}">
+        <input type="hidden" name="not_act_id" value="{admin_not_activated_list.GR_REQUEST_ID}">
+        <!-- ENDIF -->
       </td>
     </tr>
     <!-- END admin_request_list -->
