new form - the admin part

--- a/templates/gr_ad.html
+++ b/templates/gr_ad.html
@@ -1,3 +1,4 @@
+{UPDATE_BOX}
 {UPDCHECK_BOX}
 <form action="admin.php" method="POST">
   <table width="100%" cellspacing="0" cellpadding="6">
@@ -10,10 +11,6 @@
         <input type="radio" name="poll" value="Y"{GR_POLL_YES_S}>{GR_POLL_YES_F}
         <input type="radio" name="poll" value="N"{GR_POLL_NO_S}>{GR_POLL_NO_F}
       </td>
-    </tr>
-    <tr class="row2" valign="top">
-      <td align="right">{GR_AD_HEADLINE_F}</td>
-      <td><textarea name="header" rows="5" cols="120" class="input">{GR_AD_HEADLINE}</textarea></td>
     </tr>
     <tr class="row1" valign="top">
       <td align="right">{GR_AD_MAIL_1_F}</td>
