--- a/templates/gr_ad_fe.html
+++ b/templates/gr_ad_fe.html
@@ -1,13 +1,13 @@
 <form action="formedit.php" method="POST">
   <table width="100%" cellspacing="0" cellpadding="5">    
     <tr>
-      <th colspan="5">{GR_WELCOMETEXT_F}</th>
+      <th colspan="7">{GR_WELCOMETEXT_F}</th>
     </tr>
     <tr class="row1">
-      <td colspan="5">{GR_EDITOR}<textarea id="welcometext" name="welcometext" class="jTagEditor">{GR_WELCOMETEXT}</textarea></td>
+      <td colspan="7">{GR_EDITOR}<textarea id="welcometext" name="welcometext" class="jTagEditor">{GR_WELCOMETEXT}</textarea></td>
     </tr>
     <tr>
-      <th>{GR_FIELDNAME_F}</th><th>{GR_FIELDTYPE_F}</th><th>&nbsp;</th><th>{GR_REQUIREDFIELD_F}</th><th>&nbsp;</th>
+      <th>{GR_FIELDNAME_F}</th><th>{GR_FIELDTYPE_F}</th><th>&nbsp;</th><th>{GR_REQUIREDFIELD_F}</th><th colspan="3">&nbsp;</th>
     </tr>
     {GR_OUTPUT}
     <tr class="{GR_TR_NEWCLASS}">
@@ -30,12 +30,12 @@
         <input type="radio" name="newrequired" value="Y">{GR_YES}
         <input type="radio" name="newrequired" value="Y">{GR_NO}
       </td>
-      <td>
+      <td colspan="3">
         &nbsp;
-      </th>
+      </td>
     </tr>
     <tr>
-      <th colspan="5">
+      <th colspan="7">
         <input type="submit" value="eintragen" class="mainoption">
       </th>
     </tr>
