title for sorting; fixed sorting for new entries

--- a/templates/gr_ad_fe.html
+++ b/templates/gr_ad_fe.html
@@ -7,7 +7,7 @@
       <td colspan="7">{GR_EDITOR}<textarea id="welcometext" name="welcometext" class="jTagEditor">{GR_WELCOMETEXT}</textarea></td>
     </tr>
     <tr>
-      <th>{GR_FIELDNAME_F}</th><th>{GR_FIELDTYPE_F}</th><th>&nbsp;</th><th>{GR_REQUIREDFIELD_F}</th><th colspan="3">&nbsp;</th>
+      <th>{GR_FIELDNAME_F}</th><th>{GR_FIELDTYPE_F}</th><th>&nbsp;</th><th>{GR_REQUIREDFIELD_F}</th><th>&nbsp;</th><th align="center" colspan="2">{GR_AD_SORT_F}</th>
     </tr>
     {GR_OUTPUT}
     <tr class="{GR_TR_NEWCLASS}">
