added preview link

--- a/templates/gr_ad_fe.html
+++ b/templates/gr_ad_fe.html
@@ -40,4 +40,7 @@
       </th>
     </tr>
   </table>
+  <p>
+    <H3 align="center"><a href="../writerequest.php">{GR_AD_PREVIEW_F}</a></H3>
+  </p>
 </form>
