fixed bug, that the wrong requests were deleted

--- a/templates/gr_wr.html
+++ b/templates/gr_wr.html
@@ -42,6 +42,9 @@
       <td align="right">{GR_PASSWORD_F}</td>
       <td colspan="4"><input name="password" type="password" size="50" value="{GR_PASSWORD}"></td>
     </tr>
+    <tr>
+      <th colspan="6">&nbsp;</th>
+    </tr>
     {GR_FORMBLOCK}
     <tr class="row2">
       <td colspan="6">
