Added Popup for not activated requests (optionally)

--- a/templates/gr_ad.html
+++ b/templates/gr_ad.html
@@ -13,15 +13,22 @@
       </td>
     </tr>
     <tr class="row1" valign="top">
+      <td align="right">{GR_AD_POPUP_ACTIVATED}</td>
+      <td>
+        <input type="radio" name="popup" value="Y"{GR_POPUP_YES_S}>{GR_POLL_YES_F}
+        <input type="radio" name="popup" value="N"{GR_POPUP_NO_S}>{GR_POLL_NO_F}
+      </td>
+    </tr>
+    <tr class="row2" valign="top">
       <td align="right">{GR_AD_MAIL_1_F}</td>
       <td><textarea name="mail1" rows="5" cols="120" class="input">{GR_AD_MAIL_1}</textarea></td>
     </tr>
-    <tr class="row2" valign="top">
+    <tr class="row1" valign="top">
       <td align="right">{GR_AD_MAIL_2_F}</td>
       <td><textarea name="mail2" rows="5" cols="120" class="input">{GR_AD_MAIL_2}</textarea></td>
     </tr>
-    <tr class="row1">
-      <td><input type="submit" class="mainoption" name="gr_ad_submit"></td>
+    <tr class="row2">
+      <td colspan="2"><input type="submit" class="mainoption" name="gr_ad_submit"></td>
     </tr>
   </table>
 </form>
