fixed bug with special chars in username; intermediate result now shown already before voting; fixed bug with sorting in the form

--- a/templates/gr_vr.html
+++ b/templates/gr_vr.html
@@ -106,7 +106,7 @@
       </form>      
       <!-- ENDIF -->
       <!-- IF GR_ALREADY_VOTED -->
-        <p>{GR_POLL_HEADLINE}</p>
+        <p>{GR_POLL_VOTED_YET}({GR_POLL_SUM}):</p>
         {GR_POLL_YES_F}
         {GR_POLL_YES_B}<br>
         {GR_POLL_NO_F}
