added 2 new field types: headline and empty line

--- a/templates/gr_ad_fe.html
+++ b/templates/gr_ad_fe.html
@@ -1,3 +1,8 @@
+<style type="text/css">
+  body {
+    min-width: 1320px;
+  }
+</style>
 <form action="formedit.php" method="POST">
   <table width="100%" cellspacing="0" cellpadding="5">    
     <tr>
@@ -20,6 +25,8 @@
           <option value="singletext">{GR_SINGLETEXT}</option>
           <option value="textfield">{GR_TEXTFIELD}</option>
           <option value="dropdown">{GR_DROPDOWN}</option>
+          <option value="headline">{GR_HEADLINE}</option>
+          <option value="spaceline">{GR_SPACELINE}</option>
         </select>
       </td>
       <td>
