--- a/templates/gr_wr.html
+++ b/templates/gr_wr.html
@@ -1,4 +1,9 @@
 <!-- JQUERY --> {JQUERY_INCLUDES}
+<style type="text/css">
+  body {
+    min-width: 1250px;
+  }
+</style>
 <form action="login.php">
   <table width="100%" cellspacing="0" cellpadding="6">
     <!-- IF OUTPUT-->
@@ -33,14 +38,14 @@
     <tr class="row2">
       <td>&nbsp;</td>
       <td align="right">{GR_USERNAME_F}</td>
-      <td><input name="username" type="text" size="50" value="{GR_USERNAME}"></td>
+      <td><input name="username" type="text" size="40" value="{GR_USERNAME}"></td>
       <td align="right">{GR_EMAIL_F}</td>
-      <td><input name="email" type="text" size="50" value="{GR_EMAIL}"></td>
+      <td><input name="email" type="text" size="40" value="{GR_EMAIL}"></td>
       <td>&nbsp;</td>
     <tr class="row1">
       <td>&nbsp;</td>
       <td align="right">{GR_PASSWORD_F}</td>
-      <td colspan="4"><input name="password" type="password" size="50" value="{GR_PASSWORD}"></td>
+      <td colspan="4"><input name="password" type="password" size="40" value="{GR_PASSWORD}"></td>
     </tr>
     <tr>
       <th colspan="6">&nbsp;</th>
