added first part of the form-editor with a solid preview function

--- a/07_only/templates/base_template/admin/settings.html
+++ b/07_only/templates/base_template/admin/settings.html
@@ -2,7 +2,7 @@
 {UPDCHECK_BOX}
 {UPDATE_BOX}
 {STATUS}
-	<form action="{F_CONFIG}" method="GET">
+	<form action="{GR_S_CONFIG}" method="POST">
 		<table width="100%">
 			<tr>
 				<th colspan="2">
@@ -11,7 +11,7 @@
 			</tr>
 			<tr>
 				<td class="row1" valign="top">
-					{GR_F_UPD_CHECK}
+					{GR_S_UPD_CHECK}
 				</td>
 				<td class="row2">
 					<input type="checkbox" name="upd_check" value="1" {GR_UPD_CHECK} />
@@ -19,7 +19,7 @@
 			</tr>
 			<tr>
 				<td class="row1" valign="top">
-					{GR_F_MAILTEXT1}
+					{GR_S_MAILTEXT1}
 				</td>
 				<td class="row2">
 					{GR_MAILTEXT1}
@@ -27,7 +27,7 @@
 			</tr>
 			<tr>
 				<td class="row1" valign="top">
-					{GR_F_MAILTEXT2}
+					{GR_S_MAILTEXT2}
 				</td>
 				<td class="row2">
 					{GR_MAILTEXT2}
@@ -35,7 +35,7 @@
 			</tr>
 			<tr>
 				<td class="row1" valign="top">
-					{GR_F_POLL}
+					{GR_S_POLL}
 				</td>
 				<td class="row2">
 					<input type="checkbox" name="poll" value="Y" {GR_POLL} />
@@ -43,7 +43,7 @@
 			</tr>
 			<tr>
 				<td class="row1" valign="top">
-					{GR_F_POPUP}
+					{GR_S_POPUP}
 				</td>
 				<td class="row2">
 					<input type="checkbox" name="popup" value="Y" {GR_POPUP} />
@@ -51,7 +51,7 @@
 			</tr>
 			<tr>
 				<td class="row1" valign="top">
-					{GR_F_CLOSETEXT}
+					{GR_S_CLOSETEXT}
 				</td>
 				<td class="row2">
 					{GR_CLOSETEXT}
