--- a/templates/gr_ad_fe.html
+++ b/templates/gr_ad_fe.html
@@ -42,7 +42,7 @@
     </tr>
     <tr>
       <th colspan="7">
-        <input type="submit" value="eintragen" class="mainoption">
+        <input type="submit" value="{GR_SAVE}" class="mainoption">
       </th>
     </tr>
   </table>
