changed mail sending method from php to the MyMailer-class & some smaller other bugfixes

--- a/templates/gr_cm.html
+++ b/templates/gr_cm.html
@@ -1,5 +1,5 @@
 <form action="closingmail.php" method="GET">
-  <table width="100%" cellspacing="0" cellpadding="5">    
+  <table width="100%" cellspacing="0" cellpadding="5">
     <tr>
       <th colspan="2">Mailtext</th>
     </tr>
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <th colspan="2">
-        <input type="submit" value="eintragen" name="closing_submit" class="mainoption">
+        <input type="submit" value="{GR_SUBMIT_F}" name="closing_submit" class="mainoption">
       </th>
     </tr>
 </table>
