new svn client - new try... i hope this one works better and does not commit the stuff to tags instead of branches

--- a/templates/gr_cm.html
+++ b/templates/gr_cm.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <th colspan="2">
-        <input type="submit" value="{GR_SUBMIT}" name="closing_submit" class="mainoption">
+        <input type="submit" value="{GR_SUBMIT_F}" name="closing_submit" class="mainoption">
       </th>
     </tr>
 </table>
