CODE CLEANUP & Walli-dation :D

--- a/07_only/templates/base_template/admin/settings.html
+++ b/07_only/templates/base_template/admin/settings.html
@@ -2,7 +2,7 @@
 {UPDCHECK_BOX}
 {UPDATE_BOX}
 {STATUS}
-	<form action="{GR_S_CONFIG}" method="POST">
+	<form action="{GR_S_CONFIG}" method="post">
 		<table width="100%">
 			<tr>
 				<th colspan="2">
