--- a/07_only/templates/base_template/admin/formedit.html
+++ b/07_only/templates/base_template/admin/formedit.html
@@ -14,7 +14,7 @@
 </script>
 <!-- disable the Enter-Button - end -->
 
-	<form action="{GR_FILE}" method="POST">
+	<form action="{GR_FILE}" method="post">
 		<table width="100%" cellpadding="3" cellspacing="0">
 			<tr>
 				<th colspan="6">
