--- a/templates/base_template/admin/form.html
+++ b/templates/base_template/admin/form.html
@@ -15,7 +15,7 @@ function add_row(){
 
 function type_change_listener(obj){
 	var area = $(obj).parent().parent().find("textarea");
-	if (obj.value == 2){
+	if (obj.value == 2 || obj.value == 5 || obj.value == 6){
 		area.removeAttr('disabled');
 		area.css('height', '60px');
 	} else {
