Added a class for fieldsets

--- a/templates/base_template/addrequest.html
+++ b/templates/base_template/addrequest.html
@@ -6,7 +6,7 @@
 			<!-- IF tabs.fieldset.S_NO_FIELDSET -->
 			{tabs.fieldset.NAME}
 			<!-- ELSE -->
-			<fieldset class="settings">
+			<fieldset class="settings gr_{tabs.fieldset.ID}">
 				<legend>{tabs.fieldset.NAME}</legend>
 				<!-- BEGIN field -->
 				<dl>
