--- a/templates/base_template/viewrequest.html
+++ b/templates/base_template/viewrequest.html
@@ -60,7 +60,7 @@
 		<div>
 			<!-- BEGIN fieldset -->
 
-			<fieldset class="settings" class="settings gr_{tabs.fieldset.ID}">
+			<fieldset class="settings gr_{tabs.fieldset.ID}">
 				<legend>{tabs.fieldset.NAME}</legend>
 				<!-- BEGIN field -->
 				<dl>
