--- a/templates/base_template/addrequest.html
+++ b/templates/base_template/addrequest.html
@@ -1,13 +1,60 @@
+<script>
+function gr_dep_check_value(name, value, target){
+	if ($("#"+name).val() == value){
+		$("#"+target).show();
+	} else {
+		gr_hide_target(target);
+	}
+}
+
+function gr_dep_check_cb(name, value, target){
+	if ($("input[name^='"+name+"["+value+"]'").is(":checked")){
+		$("#"+target).show();
+	} else {
+		gr_hide_target(target);
+	}
+}
+	
+function gr_dep_check_radio(name, value, target){
+	if ($("input[name="+name+"]:checked").val() == value){
+		$("#"+target).show();
+	} else {
+		gr_hide_target(target);
+	}
+}
+
+function gr_hide_target(target){
+	$("#"+target).hide();
+	$("#"+target+" input[type=checkbox]").removeAttr("checked");
+	$("#"+target+" input[type=checkbox]").trigger("change");
+	$("#"+target+" input[type=radio]").removeAttr("checked");
+	$("#"+target+" input[type=radio]").trigger("change");
+	$("#"+target+" select").val("");
+	$("#"+target+" select").trigger("change");
+}
+</script>
+
+<div class="breadcrumb-container">
+	<ul class="breamcrumb">
+		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="icon-home"></i></a></li>
+		<li class="current"><a>{L_gr_add}</a></li>
+	</ul>
+	<div class="clear"></div>
+</div>
+<div class="contentHeader">
+	<h1 class="contentTitle">{L_gr_add}</h1>
+</div>
+
 <form method="post" action="">
 	<!-- BEGIN tabs -->
 		<div>
 		
 			<!-- BEGIN fieldset -->
 
-			<fieldset class="settings gr_{tabs.fieldset.ID}">
+			<fieldset class="settings gr_{tabs.fieldset.ID}" id="{tabs.fieldset.FID}">
 				<legend>{tabs.fieldset.NAME}</legend>
 				<!-- BEGIN field -->
-				<dl>
+				<dl id="{tabs.fieldset.field.ID}">
 					<!-- IF tabs.fieldset.field.S_NO_DIVIDER -->
 					{tabs.fieldset.field.NAME}
 					<!-- ELSE -->
@@ -38,9 +85,8 @@
 			</dl>
 		</fieldset>
 	</div>
-	
-	<input type="submit" name="save" class="mainoption bi_ok"  value="{L_gr_submit_request}" />
-	<input type="reset" name="reset" class="liteoption bi_reset" value="{L_reset}"/>
+	<button type="submit" name="save"><i class="icon-ok"></i>{L_gr_submit_request}</button>
+	<button type="reset"><i class="icon-trash"></i>{L_reset}</button>
 	
 {CSRF_TOKEN}
 </form>
