--- a/templates/base_template/viewrequest.html
+++ b/templates/base_template/viewrequest.html
@@ -1,3 +1,24 @@
+<!-- IF S_EXTERNAL_USER -->
+<script>
+	$(document).ready(function(){
+		$( "<input type='hidden' name='key' value='{EXTERNAL_KEY}' />" ).appendTo( "#comment_dataext" );
+	})
+</script>
+<!-- ENDIF -->
+<div class="breadcrumb-container">
+	<ul class="breamcrumb">
+		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="icon-home"></i></a></li>
+		<!-- IF not S_EXTERNAL_USER -->
+		<li><a href="{EQDKP_CONTROLLER_PATH}/Listapplications/{SID}">{L_gr_view}</a></li>
+		<!-- ENDIF -->
+		<li class="current"><a>{L_gr_viewrequest}: {GR_DATE}, {GR_USERNAME}</a></li>
+	</ul>
+	<div class="clear"></div>
+</div>
+<div class="contentHeader">
+	<h1 class="contentTitle">{L_gr_viewrequest}: {GR_DATE}, {GR_USERNAME}</h1>
+</div>
+
 	<!-- IF S_CLOSED -->
 	<div class="errorbox roundbox">
 		<div class="closed">{L_gr_closed}</div>
@@ -42,14 +63,19 @@
 				</dt>
 				<dd>{STATUS_DD}
 					<textarea name="gr_status_text" style="width:95%" rows="4"></textarea>
-					<br /><input type="submit" name="status_change" value="{L_gr_change_status}" class="mainoption bi_ok"/>
+					<br /><button type="submit" name="status_change"><i class="icon-ok"></i>{L_gr_change_status}</button>
 				</dd>
 				
 			</dl>
 			<dl>
 				<dt><label>{L_gr_close}</label>
 				</dt>
-				<dd><!-- IF S_CLOSED --><input type="submit" name="open" value="{L_gr_open_request}" class="mainoption bi_open"/><!-- ELSE --> <input type="submit" name="close" value="{L_gr_close}" class="mainoption bi_close"/><!-- ENDIF --></dd>
+				<dd>
+					<!-- IF S_CLOSED -->
+						<button type="submit" name="open"><i class="icon-unlock"></i>{L_gr_open_request}</button>
+					<!-- ELSE -->
+						<button type="submit" name="close"><i class="icon-lock"></i>{L_gr_close}</button>
+					<!-- ENDIF --></dd>
 			</dl>
 		</fieldset>
 	{CSRF_TOKEN}
@@ -63,7 +89,7 @@
 			<fieldset class="settings gr_{tabs.fieldset.ID}">
 				<legend>{tabs.fieldset.NAME}</legend>
 				<!-- BEGIN field -->
-				<dl>
+				<dl id="{tabs.fieldset.field.ID}">
 					<!-- IF tabs.fieldset.field.S_NO_DIVIDER -->
 					{tabs.fieldset.field.NAME}
 					<!-- ELSE -->
@@ -93,7 +119,7 @@
 		<div class="clear"></div>
 		<!-- IF not S_HAS_VOTED -->
 		{CSRF_TOKEN}
-		<input type="submit" name="vote" value="{L_gr_vote_button}" class="mainoption bi_ok"/>
+		<button type="submit" name="vote"><i class="icon-check"></i>{L_gr_vote_button}</button>
 		<!-- ENDIF -->
 		</form>
 	</div>
