--- a/templates/base_template/admin/form.html
+++ b/templates/base_template/admin/form.html
@@ -52,11 +52,11 @@ function buildDepFieldDropdowns(){
 	$('.gr_dep_field').each(function(){
 		var selected = $(this).val();
 		var dd = $(this);
-		$(this).html('<option value="0"></option>');
+		$(this).html('<option value="0"></option><option value="999999999">__Custom</option>');
 		$.each(options, function(k,v){
 			$('<option value="'+myids[k]+'">'+v+'</option>').appendTo(dd);
 		})
-		if ($.inArray(selected, myids) != -1){
+		if (($.inArray(selected, myids) != -1) || (selected == 999999999)){
 			dd.val(selected);
 		} else {
 			dd.parent().parent().find('.gr_dep_value').val('');
@@ -83,10 +83,15 @@ $(document).ready(function(){
 		<h1 class="contentTitle">{L_gr_manage_form}</h1>
 	</div>
 	
+<div class="bluebox roundbox">
+	<div class="icon_info">{L_gr_customcheck_info}</div>
+</div>
+<br />
 <form name="gr_settings" action="{ACTION}" method="post">
 	<table width="100%" border="0" cellspacing="1" cellpadding="2" id="gr_form_table" class="colorswitch">
 		<thead>
 		<tr class="not-sortable">
+			<th width="10px"></th>
 			<th width="10px"></th>
 			<th width="20px;"></th>
 			<th>{L_name}</th>
@@ -102,6 +107,7 @@ $(document).ready(function(){
 		<!-- BEGIN field_row -->
 		<tr>
 			<td><span class="ui-icon ui-icon-arrowthick-2-n-s" title="{L_dragndrop}"></span></td>
+			<td width="10px">#{field_row.KEY}</td>
 			<td align="center"><input type="hidden" name="field[{field_row.KEY}][id]" value="{field_row.KEY}" class="gr_id"/><img src="{EQDKP_IMAGE_PATH}global/delete.png" alt="{L_gr_delete_field}" title="{L_gr_delete_field}" onclick="delete_row(this);"/></td>
 			<td><input type="text" name="field[{field_row.KEY}][name]" value="{field_row.NAME}" class="input gr_name" style="width: 90%" /></td>
 			<td>{field_row.TYP_DD}</td>
@@ -113,15 +119,11 @@ $(document).ready(function(){
 		</tr>
 		<!-- END field_row -->
 		</tbody>
-		<tfoot>
-		<tr>
-			<th colspan="9">
-				<button type="button" onclick="add_row();"><i class="icon-plus"></i>{L_gr_add_field}</button>
-				<button type="submit" name="save"><i class="icon-ok"></i>{L_save}</button>
-			</th>
-		</tr>
-		</tfoot>
 	</table>
+	<div class="contentFooter">
+		<button type="button" onclick="add_row();"><i class="icon-plus"></i>{L_gr_add_field}</button>
+		<button type="submit" name="save"><i class="icon-ok"></i>{L_save}</button>
+	</div>
 	
 {CSRF_TOKEN}
 </form>
@@ -130,6 +132,7 @@ $(document).ready(function(){
 <table style="display:none;">
 	<tr id="reference_row">
 		<td><span class="ui-icon ui-icon-arrowthick-2-n-s" title="{L_dragndrop}"></span></td>
+		<td width="10px">#KEY</td>
 		<td align="center"><input type="hidden" name="field[KEY][id]" value="KEY" class="gr_id" /><img src="{EQDKP_IMAGE_PATH}global/delete.png" alt="{L_gr_delete_field}" title="{L_gr_delete_field}" onclick="delete_row(this);"/></td>
 		<td><input type="text" name="field[KEY][name]" value="" class="input gr_name" style="width: 90%" /></td>
 		<td>{TYP_DD}</td>
