--- a/templates/base_template/viewrequest.html
+++ b/templates/base_template/viewrequest.html
@@ -26,7 +26,9 @@
 	<br />
 	<!-- ENDIF -->
 	<div class="bluebox roundbox">
-		<div class="{STATUS_ICON}">{STATUS_TEXT}</div>
+		<div class="{STATUS_ICON}"><!-- IF S_SUCCESS_MSG -->{L_gr_request_success_msg}<a href="{EXTERNAL_URL}">{EXTERNAL_URL}</a><br /><br /><!-- ENDIF -->
+		
+		{STATUS_TEXT}</div>
 	</div>
 	<br />
 	
