--- a/templates/base_template/admin/form.html
+++ b/templates/base_template/admin/form.html
@@ -82,9 +82,9 @@ $(document).ready(function(){
 	<div class="contentHeader">
 		<h1 class="contentTitle">{L_gr_manage_form}</h1>
 	</div>
-	
-<div class="bluebox roundbox">
-	<div class="icon_info">{L_gr_customcheck_info}</div>
+
+<div class="infobox infobox-large infobox-blue clearfix">
+	<i class="icon-info-sign icon-4x pull-left"></i> {L_gr_customcheck_info}
 </div>
 <br />
 <form name="gr_settings" action="{ACTION}" method="post">
