--- a/templates/base_template/admin/form.html
+++ b/templates/base_template/admin/form.html
@@ -108,7 +108,7 @@ $(document).ready(function(){
 		<tr>
 			<td><span class="ui-icon ui-icon-arrowthick-2-n-s" title="{L_dragndrop}"></span></td>
 			<td width="10px">#{field_row.KEY}</td>
-			<td align="center"><input type="hidden" name="field[{field_row.KEY}][id]" value="{field_row.KEY}" class="gr_id"/><img src="{EQDKP_IMAGE_PATH}global/delete.png" alt="{L_gr_delete_field}" title="{L_gr_delete_field}" onclick="delete_row(this);"/></td>
+			<td align="center"><input type="hidden" name="field[{field_row.KEY}][id]" value="{field_row.KEY}" class="gr_id"/><i class="icon-trash icon-large" title="{L_gr_delete_field}"  onclick="delete_row(this);"></i></td>
 			<td><input type="text" name="field[{field_row.KEY}][name]" value="{field_row.NAME}" class="input gr_name" style="width: 90%" /></td>
 			<td>{field_row.TYP_DD}</td>
 			<td><input type="text" name="field[{field_row.KEY}][help]" value="{field_row.HELP}" class="input gr_help" style="width: 90%" {field_row.HELP_DISABLED}/></td>
@@ -133,7 +133,7 @@ $(document).ready(function(){
 	<tr id="reference_row">
 		<td><span class="ui-icon ui-icon-arrowthick-2-n-s" title="{L_dragndrop}"></span></td>
 		<td width="10px">#KEY</td>
-		<td align="center"><input type="hidden" name="field[KEY][id]" value="KEY" class="gr_id" /><img src="{EQDKP_IMAGE_PATH}global/delete.png" alt="{L_gr_delete_field}" title="{L_gr_delete_field}" onclick="delete_row(this);"/></td>
+		<td align="center"><input type="hidden" name="field[KEY][id]" value="KEY" class="gr_id" /><i class="icon-trash icon-large" title="{L_delte}" onclick="delete_row(this);"></i></td>
 		<td><input type="text" name="field[KEY][name]" value="" class="input gr_name" style="width: 90%" /></td>
 		<td>{TYP_DD}</td>
 		<td><input type="text" name="field[KEY][help]" value="" class="input gr_help" style="width: 90%" /></td>
